WIP Gestalt check-in

--- a/src/assets/style/_illustrations.scss
+++ b/src/assets/style/_illustrations.scss
@@ -13,3 +13,11 @@
     stroke-dasharray: 10 10.5;
   }
 }
+
+.chart-pragnanz-illustration {
+  line {
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    stroke-width: 3px;
+  }
+}
