--- a/src/assets/style/_typography.scss
+++ b/src/assets/style/_typography.scss
@@ -1,3 +1,32 @@
+@each $weight in (400, 600, 700) {
+  @font-face {
+    font-family: 'Goldplay';
+    font-style: normal;
+    font-weight: $weight;
+    src: url(https://fonts.northxsouth.co/goldplay/#{$weight}.woff)
+        format('woff'),
+      url(https://fonts.northxsouth.co/goldplay/#{$weight}.woff2)
+        format('woff2');
+  }
+}
+
+@each $weight in (400) {
+  @font-face {
+    font-family: 'Goldplay';
+    font-style: italic;
+    font-weight: $weight;
+    src: url(https://fonts.northxsouth.co/goldplay/#{$weight}i.woff)
+        format('woff'),
+      url(https://fonts.northxsouth.co/goldplay/#{$weight}i.woff2)
+        format('woff2');
+  }
+}
+
 p {
   @apply mb-3;
+}
+
+b,
+strong {
+  @apply font-semibold;
 }
