Fix image display

--- a/src/assets/style/_mdx.scss
+++ b/src/assets/style/_mdx.scss
@@ -3,7 +3,7 @@
 }
 
 figure .gatsby-resp-image-wrapper {
-  @apply rounded overflow-hidden;
+  @apply rounded overflow-hidden w-full h-full;
 }
 
 .iframe-16-9 {
