Update Forms page

--- a/src/assets/style/_typography.scss
+++ b/src/assets/style/_typography.scss
@@ -10,7 +10,7 @@
   }
 }
 
-@each $weight in (400) {
+@each $weight in (400, 600) {
   @font-face {
     font-family: 'Goldplay';
     font-style: italic;
