--- a/src/assets/style/style.scss
+++ b/src/assets/style/style.scss
@@ -9,14 +9,14 @@
 
 body,
 html {
-  @apply h-full overflow-x-hidden;
+  @apply overflow-x-hidden;
 }
 
 body {
-  @apply flex flex-col;
+  @apply text-grey-800 dark:bg-grey-900 dark:text-grey-400;
 }
 
-#___gatsby,
-#gatsby-focus-wrapper {
-  display: contents;
-}
+// #___gatsby,
+// #gatsby-focus-wrapper {
+//   display: contents;
+// }
